# stasis

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix
examples/: stasis.rune
man/: stasis.5
src/: actions.rs  app_inhibit.rs  brightness.rs  config.rs  control.rs  idle_timer.rs  input.rs  ipc.rs  libinput.rs  lid.rs  log.rs  main.rs  media.rs  power_detection.rs  suspend.rs  utils.rs  wayland.rs  wayland_input.rs
src/config/: display.rs  mod.rs  model.rs  parser.rs
src/core/: actions.rs  mod.rs  pre_suspend.rs
src/core/legacy/: mod.rs  state.rs  tasks.rs  timer.rs
src/services/: app_inhibit.rs  input.rs  media.rs  mod.rs  power_detection.rs  suspend.rs  wayland.rs
src/wayland/: mod.rs  wlroots_virtual_keyboard.rs
