[package]
name = "stasis"
version = "0.1.3"
edition = "2024"

[features]
wlroots_virtual_keyboard = []

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
input = "0.9.1" # detect idle / input
libc = "0.2.175"
mpris = "2.0.1"
once_cell = "1.21.3"
regex = "1.11.3"
rune-cfg = "0.1.1"
serde_json = "1.0.145"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }  # async runtime, timers, tasks
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wayland-client = "0.31"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-scanner = "0.31.7"
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
