[package]
name = "stasis"
version = "0.1.48"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
dirs = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
input = "0.9.1" # detect idle / input
libc = "0.2.175"
mpris = "2.0.1"
once_cell = "1.21.3"
regex = "1.11.3"
rune-cfg = "0.1.2"
serde_json = "1.0.145"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }  # async runtime, timers, tasks
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
zbus = { version = "5.11.0", features = ["tokio"] }
zbus_macros = "5.11.0"
